<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Criar Tarefa"
        app:navigationIcon="@drawable/ic_navigate_before"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10"
         />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        >

    </androidx.constraintlayout.widget.Guideline>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_title"
        app:startIconContentDescription="adicione o título da tarefa"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="Título da tarefa"
        android:hint="@string/text_title_input"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        app:layout_constraintTop_toBottomOf="@+id/til_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_description"
        app:startIconContentDescription="adicione a descrição da tarefa"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="Descrição da tarefa"
        android:hint="@string/hint_description"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/til_hour"
        app:layout_constraintTop_toBottomOf="@+id/til_description"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_date"
        app:startIconContentDescription="adicione a data"
        app:errorEnabled="true"
        app:helperText="data da tarefa"
        android:hint="@string/hint_data"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_watch"
        app:startIconContentDescription="adicione a hora"
        app:errorEnabled="true"
        app:helperText="adicione a hora"
        android:hint="@string/hint_hour"
        app:layout_constraintTop_toTopOf="@+id/til_data"
        app:layout_constraintStart_toEndOf="@id/til_data"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@+id/til_description"
        android:layout_marginStart="16dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_new_task"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        android:layout_marginBottom="8dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/hint_cancel"
        android:textAllCaps="false"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button"
        android:text="@string/text_create_task"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>